inicio de llamadas asincronicas

--- a/formAlta.html
+++ b/formAlta.html
@@ -59,8 +59,9 @@
 				<input type="text" name="nombre" ng-model="persona.nombre" placeholder="ingrese nombre" value="" /> <span id="lblNombre" style="display:none;color:#FF0000;width:1%;float:right;font-size:80">*</span>
 				<input type="text" name="dni" ng-model="persona.dni" placeholder="ingrese dni" value=""     /> 
 				<span id="lblDni" style="display:none;color:#FF0000;width:1%;float:right;font-size:80">*</span>
-				<p style='color: black;'>*El DNI no se puede modificar.</p> ": "" ; ?>
-				
+
+				<p style='color: black;'>	{{ persona.nombre + persona.apellido }}*El DNI nosss se modificar.</p> 
+			
 				<input type="hidden" name="idOculto" id="id" value="" />
 				<!--
 				<input type="file" name="foto" />
