--- a/index.html
+++ b/index.html
@@ -44,13 +44,10 @@
 
 </head>
 <body style="color:black" ng-app="ABMangularPHP" ng-controller="controlMenu">
-	 <div ui-view ></div>
 	 
-
-
-
-
-
+<!-- la directiva ui-view me permite ir mostrando las diferentes vistas -->
+     <div ui-view ></div>
+	 
      <!-- jQuery -->
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
 
