--- a/vistas/inicio.html
+++ b/vistas/inicio.html
@@ -17,19 +17,19 @@
                         <a href="#page-top"></a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#portfolio">Inicio</a>
+                        <a ui-sref="persona.menu()">Inicio</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#about">Login</a>
+                        <a ui-sref="persona.menu()">Login</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#contact">Registro</a>
+                        <a ui-sref="persona.menu()">Registro</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#contact">ABM Personas</a>
+                        <a ui-sref="persona.menu()">ABM Personas</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#contact">Juegos</a>
+                        <a ui-sref="persona.menu()">Juegos</a>
                     </li>
                 </ul>
             </div>
