Se agrega manejos de usuarios

--- a/vistas/inicio.html
+++ b/vistas/inicio.html
@@ -17,14 +17,11 @@
                         <a href="#page-top"></a>
                     </li>
                     <li class="page-scroll">
-                        <a ui-sref="persona.menu()">Inicio</a>
+                        <a ui-sref="inicio()">Inicio</a>
                     </li>
                     <li class="page-scroll">
-                        <a ui-sref="persona.menu()">Login</a>
-                    </li>
-                    <li class="page-scroll">
-                        <a ui-sref="persona.menu()">Registro</a>
-                    </li>
+                        <a ui-sref="usuario.menu()">Usuario</a>
+                    </li>                    
                     <li class="page-scroll">
                         <a ui-sref="persona.menu()">ABM Personas</a>
                     </li>
