--- a/index.html
+++ b/index.html
@@ -38,7 +38,12 @@
  	<script SRC="js/app.js" TYPE="text/javascript"></script>
 	
     
-   
+    <!--
+    Le saco los estilos que me rompen todas las vitas!
+     <link rel="stylesheet" type="text/css" href="bower_components/estilos/estilo.css">
+      -->
+
+    <link rel="stylesheet" type="text/css" href="css/misEstilos.css">
     <link rel="stylesheet" type="text/css" href="bower_components/estilos/animacion.css">
 
 
