--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<!--final de Estilos-->    
 
  <!-- Bootstrap Core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="css/freelancer.min.css" rel="stylesheet">
     <!-- Custom CSS -->
 <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -35,6 +35,9 @@
 
  	<script SRC="bower_components/angular/angular.min.js" TYPE="text/javascript"></script>
  	<script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+
+<script src="bower_components/satellizer/dist/satellizer.js"></script>
+
  	<script SRC="js/app.js" TYPE="text/javascript"></script>
 	
     
