Uso auth.php desde app.js

--- a/vistas/usuarioLogin.html
+++ b/vistas/usuarioLogin.html
@@ -2,8 +2,8 @@
     <div class="Frm animated bounceInLeft">
       <form class="" name="myForm">
         <label class="miEstilo">Login</label><br><br>
-        <input type="email" id="correo" name="email" ng-model="email" placeholder="Ingrese su email" value=""><br>
-        <input type="password" id="clave" minlength="7" ng-model="password" placeholder="clave" required="true" value=""><br>
+        <input type="email" id="correo" name="email" ng-model="usuario.email" placeholder="Ingrese su email" value=""><br>
+        <input type="password" id="clave" minlength="7" ng-model="usuario.password" placeholder="clave" required="true" value=""><br>
         <button class="button-green" id="login" ng-click="Login()" ng-disabled="myForm.$invalid"><span>Login </span></button>
       </form>
     </div>
