--- a/index.html
+++ b/index.html
@@ -32,13 +32,15 @@
 	
  	<link href="bower_components/components-font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
-
+<!-- ANGULAR JS -->
  	<script SRC="bower_components/angular/angular.min.js" TYPE="text/javascript"></script>
  	<script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+  <script src="bower_components/angular-file-upload/dist/angular-file-upload.min.js"></script>
+  <script src="bower_components/satellizer/dist/satellizer.js"></script>
 
-<script src="bower_components/satellizer/dist/satellizer.js"></script>
 
  	<script SRC="js/app.js" TYPE="text/javascript"></script>
+  <script SRC="js/ngThumb.js" TYPE="text/javascript"></script>
 	
     
     <!--
