Vista Sala de juegos

--- a/vistas/inicio.html
+++ b/vistas/inicio.html
@@ -26,7 +26,7 @@
                         <a ui-sref="persona.menu()">ABM Personas</a>
                     </li>
                     <li class="page-scroll">
-                        <a ui-sref="persona.menu()">Juegos</a>
+                        <a ui-sref="juegos.menu()">Juegos</a>
                     </li>
                 </ul>
             </div>
