--- a/vistas/personaGrilla.html
+++ b/vistas/personaGrilla.html
@@ -23,8 +23,8 @@
 									</thead>
 									
 									<tr ng-repeat="persona in ListadoPersonas">
-
-										<td><img  class='fotoGrilla' ng-src="{{persona.avatar}}" /></td>
+										<!--<td><img  class='fotoGrilla' ng-src="{{persona.avatar}}" /></td>-->
+										<td><img  class='fotoGrilla' ng-src="fotos/{{persona.foto}}" height="44" width="44"/></td>
 							
 										<td>{{persona.nombre}}</td>
 										<td>{{persona.apellido}}</td>
