--- a/index.html
+++ b/index.html
@@ -11,36 +11,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Ejemplo de angular JS">
     <meta name="author" content="Octavio villegas">
-	<link rel="icon" href="http://www.octavio.com.ar/favicon.ico">
+	  <link rel="icon" href="http://www.octavio.com.ar/favicon.ico">
 
-
-
-
-
-	<!--final de Estilos-->    
 
  <!-- Bootstrap Core CSS -->
     <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="css/freelancer.min.css" rel="stylesheet">
     <!-- Custom CSS -->
-<link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
  		
 
 <!-- Custom Fonts -->
 	
- 	<link href="bower_components/components-font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+  	<link href="bower_components/components-font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
 <!-- ANGULAR JS -->
- 	<script SRC="bower_components/angular/angular.min.js" TYPE="text/javascript"></script>
- 	<script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
-  <script src="bower_components/angular-file-upload/dist/angular-file-upload.min.js"></script>
-  <script src="bower_components/satellizer/dist/satellizer.js"></script>
+   	<script SRC="bower_components/angular/angular.min.js" TYPE="text/javascript"></script>
+   	<script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+    <script src="bower_components/angular-file-upload/dist/angular-file-upload.min.js"></script>
+    <script src="bower_components/satellizer/dist/satellizer.js"></script>
 
 
- 	<script SRC="js/app.js" TYPE="text/javascript"></script>
-  <script SRC="js/ngThumb.js" TYPE="text/javascript"></script>
+   	<script SRC="js/app.js" TYPE="text/javascript"></script>
+    <script src="js/controllers.js"></script>
+    <script SRC="js/ngThumb.js" TYPE="text/javascript"></script>
 	
     
     <!--
@@ -49,7 +45,9 @@
       -->
 
     <link rel="stylesheet" type="text/css" href="css/misEstilos.css">
+    <link rel="stylesheet" type="text/css" href="css/estiloUTN.css">
     <link rel="stylesheet" type="text/css" href="bower_components/estilos/animacion.css">
+    <link rel="stylesheet" type="text/css" href="bower_components/bootstrap-social/bootstrap-social.css">
 
 
 </head>
