--- a/vistas/usuarioRegistrarse.html
+++ b/vistas/usuarioRegistrarse.html
@@ -45,14 +45,14 @@
     </div>
 </div>
 
-<div class="col-md-9" style="margin-bottom: 40px">
+<div >
     <h3>Upload queue</h3>
     <p>Queue length: {{ uploader.queue.length }}</p>
 
-<table class="table">
+<table class='table table-hover table-responsive' align="center">
     <thead>
         <tr>
-            <th width="50%">Name</th>
+            <th >Name</th>
             <th ng-show="uploader.isHTML5">Size</th>
             <th ng-show="uploader.isHTML5">Progress</th>
             <th>Status</th>
@@ -61,7 +61,7 @@
     </thead>
     <tbody>
         <tr ng-repeat="item in uploader.queue">
-            <td>{{ item.file.name }}
+            <td>
               <div ng-show="uploader.isHTML5" ng-thumb="{ file: item._file, height: 100 }"></div>
             </td>
             <td ng-show="uploader.isHTML5" nowrap>{{ item.file.size/1024/1024|number:2 }} MB</td>
@@ -94,5 +94,5 @@
 </form>
 </div>
 
-    <h1>Estado:{{myForm.$valid}}</h1>
+    <!--<h1>Estado:{{myForm.$valid}}</h1>-->
 
