--- a/vistas/juegosMenu.html
+++ b/vistas/juegosMenu.html
@@ -16,8 +16,26 @@
 										<a ui-sref="juegos.adivinaelnumero2()" class="list-group-item  list-group-item list-group-item-info">
 									      <h4 class="list-group-item-heading">Adivina el numero 2</h4>
 									    </a>
-									
-									  </div>
+
+									    <a ui-sref="juegos.agilidadaritmetica1()" class="list-group-item  list-group-item list-group-item-info">
+									      <h4 class="list-group-item-heading">Agilidad aritmética 1</h4>
+									    </a>
+
+									    <a ui-sref="juegos.agilidadaritmetica2()" class="list-group-item  list-group-item list-group-item-info">
+									      <h4 class="list-group-item-heading">Agilidad aritmética 2</h4>
+									    </a>
+
+									    <a ui-sref="juegos.piedrapapeltijera1()" class="list-group-item  list-group-item list-group-item-info">
+									      <h4 class="list-group-item-heading">Priedra Papel ó Tijeras 1</h4>
+									    </a>
+
+									    <a ui-sref="juegos.piedrapapeltijera2()" class="list-group-item  list-group-item list-group-item-info">
+									      <h4 class="list-group-item-heading">Priedra Papel ó Tijeras 2</h4>
+									    </a>
+
+									    <a ui-sref="juegos.reflejosdaltonicos()" class="list-group-item  list-group-item list-group-item-info">
+									      <h4 class="list-group-item-heading">Reflejos daltonicos</h4>
+									    </a>
 									
 							</form>
 						</div>
