--- a/vistas/juegos/AgilidadAritmetica2.html
+++ b/vistas/juegos/AgilidadAritmetica2.html
@@ -1,11 +1,11 @@
 
 		<div class="CajaUno animated bounceInDown" ng-init="Comenzar()">
 
-			<input type="text" readonly ng-model="PrimerNumero">
-			<input type="text" readonly ng-model="operacion">
-			<input type="text" readonly ng-model="SegundoNumero">
+			<input type="text" class="estiloUTN" readonly ng-model="PrimerNumero">
+			<input type="text" class="estiloUTN" readonly ng-model="operacion">
+			<input type="text" class="estiloUTN" readonly ng-model="SegundoNumero">
 			<form id="FormIngreso">
-				<input type="text"  ng-model="respuesta">
+				<input type="text"  class="estiloUTN" ng-model="respuesta">
 				<center>
 					<img src="img/interrogacion.jpg" >
 				</center>
