--- a/vistas/juegos/ReflejosDaltonicos1.html
+++ b/vistas/juegos/ReflejosDaltonicos1.html
@@ -3,7 +3,7 @@
 			
 			<form id="FormIngreso">
 				RESULTADO:{{resultado}}
-				<input type="text" readonly ng-model="ColorSecreto">
+				<input type="text" class="estiloUTN" readonly ng-model="ColorSecreto">
 				
 			</form>
 			<button   style="background:blue;"  class="MiBotonUTNJuego animated tada swing wobble" ng-click="Responder('azul')" >azul</button>
