--- a/vistas/juegos/AdivinaElNumero2.html
+++ b/vistas/juegos/AdivinaElNumero2.html
@@ -4,10 +4,10 @@
 		
 			<form id="FormIngreso">
 
-				<input type="text"  placeholder="Ingrese número" ng-model="numeroIngresado">
+				<input type="text" class="estiloUTN" placeholder="Ingrese número" ng-model="numeroIngresado">
 				
 				<br>
-				<input type="text"  placeholder="intentos" readonly ng-model="contadorIntentos">
+				<input type="text" class="estiloUTN" placeholder="intentos" readonly ng-model="contadorIntentos">
 			</form>
 			
 		</div>
