--- a/vistas/juegos/PiedraPapelTijera2.html
+++ b/vistas/juegos/PiedraPapelTijera2.html
@@ -2,11 +2,11 @@
 <div class="CajaUno animated bounceInDown" ng-init="Comenzar()">
 	
 	Victorias:
-	<input type="text" readonly ng-model="ganadas">
+	<input type="text" class="estiloUTN" readonly ng-model="ganadas">
 	Derrotas:
-	<input type="text" readonly ng-model="perdidas">
+	<input type="text" class="estiloUTN" readonly ng-model="perdidas">
 	Empates:
-	<input type="text" readonly ng-model="empatadas">
+	<input type="text" class="estiloUTN" readonly ng-model="empatadas">
 	<form id="FormIngreso">
 		<center>
 			<img src="img/interrogacion.jpg" >
