--- a/vistas/personaAlta.html
+++ b/vistas/personaAlta.html
@@ -1,9 +1,6 @@
 	<div class="container">
-		<div class="page-header">
-			<center> <h1>Datos {{DatoTest}}</h1>   </center>     
-		</div>
 		<div class="CajaInicio animated bounceInRight">
-			<h1> titulo </h1>
+			<h1> ALTA PERSONA </h1>
 
 			<form name="FormIngreso" id="FormIngreso"  enctype="multipart/form-data" novalidate >
 				<label  >visualizador</label>
@@ -38,13 +35,72 @@
 				<span ng-if="">*</span><br>
 			
 				<input type="hidden" name="idOculto" id="id" value="" />
+
 				<!--
-				<input type="file" name="foto" />
+				<input type="file" name="foto" id="foto" ng-model="persona.foto"/>
 
-
+				
 				<img  src="fotos/pordefecto.png" class="fotoform" id="foto"/>
 				<p style="  color: black;">*La foto se actualiza al guardar.</p>
 				-->
+
+				<div>
+    <h3>Select files</h3>
+    Multiple
+    <!--<div nv-file-drop="" uploader="uploader" options="{ url: '/foo' }"> -->
+    <div nv-file-drop="" uploader="uploader">
+        <div nv-file-over="" uploader="uploader" over-class="another-file-over-class" class="well my-drop-zone">
+            Another drop zone with its own settings
+        </div>
+    </div>
+</div>
+
+<div >
+    <h3>Upload queue</h3>
+    <p>Queue length: {{ uploader.queue.length }}</p>
+
+<table class='table table-hover table-responsive' align="center">
+    <thead>
+        <tr>
+            <th >Name</th>
+            <th ng-show="uploader.isHTML5">Size</th>
+            <th ng-show="uploader.isHTML5">Progress</th>
+            <th>Status</th>
+            <th>Actions</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr ng-repeat="item in uploader.queue">
+            <td>
+              <div ng-show="uploader.isHTML5" ng-thumb="{ file: item._file, height: 100 }"></div>
+            </td>
+            <td ng-show="uploader.isHTML5" nowrap>{{ item.file.size/1024/1024|number:2 }} MB</td>
+            <td ng-show="uploader.isHTML5">
+                <div class="progress" style="margin-bottom: 0;">
+                    <div class="progress-bar" role="progressbar" ng-style="{ 'width': item.progress + '%' }"></div>
+                </div>
+            </td>
+            <td class="text-center">
+                <span ng-show="item.isSuccess"><i class="glyphicon glyphicon-ok"></i></span>
+                <span ng-show="item.isCancel"><i class="glyphicon glyphicon-ban-circle"></i></span>
+                <span ng-show="item.isError"><i class="glyphicon glyphicon-remove"></i></span>
+            </td>
+            <td nowrap>
+                <button type="button" class="btn btn-success btn-xs" ng-click="item.upload()" ng-disabled="item.isReady || item.isUploading || item.isSuccess">
+                    <span class="glyphicon glyphicon-upload"></span> Upload
+                </button>
+                <button type="button" class="btn btn-warning btn-xs" ng-click="item.cancel()" ng-disabled="!item.isUploading">
+                    <span class="glyphicon glyphicon-ban-circle"></span> Cancel
+                </button>
+                <button type="button" class="btn btn-danger btn-xs" ng-click="item.remove()">
+                    <span class="glyphicon glyphicon-trash"></span> Remove
+                </button>
+            </td>
+        </tr>
+    </tbody>
+</table>
+
+
 
 				<a class="btn btn-info " ng-disable="FormIngreso.$invalid" ng-click="Guardar()" ><span class="glyphicon glyphicon-save">&nbsp;</span>Guardar</a>
 					
