FIX alta personas

--- a/vistas/personaAlta.html
+++ b/vistas/personaAlta.html
@@ -21,7 +21,7 @@
 
 
 				<label  >sexo:</label><br>
-				 <input type="radio" ng-model="persona.sexo" value="Masculino" required><label  >Masculino</label> 
+				 <input type="radio" ng-model="persona.sexo" value="Masculino"  checked="checked" ><label  >Masculino</label> 
 				 <input type="radio" ng-model="persona.sexo" value="Femenino" required> <label  >Femenino</label>
 				 <input type="radio" ng-model="persona.sexo" value="other" required><label  >Otro</label><br>
 
