--- a/index.html
+++ b/index.html
@@ -28,6 +28,42 @@
   	<link href="bower_components/components-font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
 <!-- ANGULAR JS -->
+
+<script src="https://www.gstatic.com/firebasejs/3.5.0/firebase.js"></script>
+<script>
+  // Initialize Firebase
+  var config = {
+    apiKey: "AIzaSyA6xIzzup0gHxfmSukj_LDkud26PQafocs",
+    authDomain: "myapp-d5d9c.firebaseapp.com",
+    databaseURL: "https://myapp-d5d9c.firebaseio.com",
+    storageBucket: "myapp-d5d9c.appspot.com",
+    messagingSenderId: "374106852509"
+  };
+  firebase.initializeApp(config);
+
+  var provider = new firebase.auth.GithubAuthProvider();
+
+  firebase.auth().signInWithPopup(provider).then(function(result) {
+  // This gives you a GitHub Access Token. You can use it to access the GitHub API.
+  var token = result.credential.accessToken;
+  // The signed-in user info.
+  var user = result.user;
+  console.info("RESULT", result);
+  // ...
+}).catch(function(error) {
+  // Handle Errors here.
+  console.info("ERROR", error);
+  var errorCode = error.code;
+  var errorMessage = error.message;
+  // The email of the user's account used.
+  var email = error.email;
+  // The firebase.auth.AuthCredential type that was used.
+  var credential = error.credential;
+  // ...
+});
+
+</script>
+
    	<script SRC="bower_components/angular/angular.min.js" TYPE="text/javascript"></script>
    	<script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="bower_components/angular-file-upload/dist/angular-file-upload.min.js"></script>
