--- a/index.html
+++ b/index.html
@@ -40,28 +40,6 @@
     messagingSenderId: "374106852509"
   };
   firebase.initializeApp(config);
-
-  var provider = new firebase.auth.GithubAuthProvider();
-
-  firebase.auth().signInWithPopup(provider).then(function(result) {
-  // This gives you a GitHub Access Token. You can use it to access the GitHub API.
-  var token = result.credential.accessToken;
-  // The signed-in user info.
-  var user = result.user;
-  console.info("RESULT", result);
-  // ...
-}).catch(function(error) {
-  // Handle Errors here.
-  console.info("ERROR", error);
-  var errorCode = error.code;
-  var errorMessage = error.message;
-  // The email of the user's account used.
-  var email = error.email;
-  // The firebase.auth.AuthCredential type that was used.
-  var credential = error.credential;
-  // ...
-});
-
 </script>
 
    	<script SRC="bower_components/angular/angular.min.js" TYPE="text/javascript"></script>
@@ -73,6 +51,7 @@
 
    	<script SRC="js/app.js" TYPE="text/javascript"></script>
     <script src="js/controllers.js"></script>
+    <script src="js/controllersJuegos.js"></script>
     <script SRC="js/ngThumb.js" TYPE="text/javascript"></script>
 	
     
